--- a/snippets/featured-new-products.liquid
+++ b/snippets/featured-new-products.liquid
@@ -1,15 +1,10 @@
-{% assign experienses = "“Curalife has kept my sugar within normal ranges even after I eat things that I probably shouldn't!”*Alon M.
-|“This is the greatest! My husband started taking this! Finally found a product that works! “*Linda V.
-|“I have tried so many different supplements with no results. This one is amazing and i am excited. I just purchased my second bottle.”*Michael Murillo Sr.
-|“It is so wonderful to find something that really works. I feel so much better!!”*Leanne A.
-|“Have been taking CuraLin over the last four months and am beyond pleased with the results.”*Michael E.
 
-" | split: '|' %}
 
-{% assign doctors = 'lp-aio-michel.png*Dr. Michael Binder:Functional doctor, author of Cracking The Diabetic Code.
-|lp-aio-nancy.png*Dr. Nancy Russell:Internal Medicine Specialist, North Kansas City Hospital
-|lp-aio-raz.png*Prof. Itamar Raz:World renouned diabetes expert with over 400 published peer-reviewed studies.
-|lp-aio-sarah.png*Dr. Sarah Brewer:Functional doctor, diabetes expert, and author of over 60 books on personal
+{% assign experienses = 'new-featured-products-01.png*Dreamy Duo & Blood Sugar Care Bundle:Gentle support for your 
+sleep and night time glucose
+|new-featured-products-02.png*Multivitamin  & Blood Sugar Care Bundle:Robust daily nutritional, cognitive, and blood sugar support
+|new-featured-products-03.png*Immunity & Blood Sugar Care Bundle:Full range immune system & blood sugar support
+|new-featured-products-04.png*Joint & Blood Sugar Care Bundle:Herbal joint support
 health.'
 | split: '|' %}
 
