--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -10,7 +10,7 @@
               <div class="swiper-slide">
                 <div class="quote-card">
                 <div class="quote-info">
-                  <img src="{{ experience | asset_url | split: "*" | first }}" alt="">
+                  <img src="{{ experience | asset_url | split: "*" | first }}" width="303" height="302" alt="">
                   <div class="quote-author">
                     <h3>{{ experience | split: "*" | last | split: ":" | first }}</h3>
                   </div>
