--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -119,7 +119,7 @@
   
    <script>
     quoteSlider = new Swiper(".quote-slider .swiper", {
-      slidesPerView: 4,
+      slidesPerView: 'auto',
       spaceBetween: 0,
       grabCursor: true,
       navigation: {
