--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -122,7 +122,8 @@
       slidesPerView: 'auto',
       spaceBetween: 0,
       grabCursor: true,
-      
+      loop: true,
+      loopedSlides: 4,
       navigation: {
         nextEl: ".next-slide2",
         prevEl: ".prev-slide2",
