--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -118,7 +118,7 @@
   
   
    <script>
-    quoteSlider = new Swiper(".quote-slider .swiper", {
+    const quoteSliderNew = new Swiper(".quote-slider .swiper", {
       slidesPerView: 'auto',
       spaceBetween: 0,
       grabCursor: true,
