--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -135,7 +135,7 @@
         },
         768: {
           slidesPerView: 1,
-          centeredSlides: false
+          centeredSlides: true
         },
         992: {
           slidesPerView: 4,
