--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -1,4 +1,4 @@
-<section id="new-featured-prods">
+<div id="new-featured-prods">
 <div class="container">
     
       <div class="featured-products-new">
@@ -31,7 +31,7 @@
         </div>
       </div>
   </div> 
-  </section>
+  </div>
   
   <style>
   
