--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -36,7 +36,10 @@
   <style>
   
   
-  
+  #new-featured-prods .quote-slider {
+    padding: unset;
+    margin: unset;
+  }
   #new-featured-prods .quote-slider .swiper-slide.swiper-slide-active .quote-card  {
       top: 0;
       background: unset;
