--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -80,6 +80,10 @@
       font-size: 22px;
       background: unset;
     }
+
+    #new-featured-prods .quote-author {
+
+    }
   
     #new-featured-prods .quoted-text {
       font-family: 'DM Sans';
@@ -132,7 +136,7 @@
           slidesPerView: 1
         },
         768: {
-          slidesPerView: 1,
+          slidesPerView: 2,
           centeredSlides: true
         },
         992: {
