--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -135,6 +135,12 @@
         0: {
           slidesPerView: 1
         },
+        500:{
+         
+            slidesPerView: 2,
+            centeredSlides: true
+       
+        },
         768: {
           slidesPerView: 2,
           centeredSlides: true
