--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -146,7 +146,7 @@
           centeredSlides: true
         },
         992: {
-          slidesPerView: 4,
+          slidesPerView: 'auto',
           centeredSlides: true
         }
       }
