--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -82,7 +82,7 @@
     }
 
     #new-featured-prods .quote-author {
-
+      padding-top: 20px;        
     }
   
     #new-featured-prods .quoted-text {
