--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -141,7 +141,7 @@
           centeredSlides: true
         },
         992: {
-          slidesPerView: 'auto',
+          slidesPerView: 3,
           centeredSlides: true
         }
       }
