--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -121,7 +121,7 @@
   
    <script>
     const quoteSliderNew = new Swiper(".quote-slider .swiper", {
-      slidesPerView: 'auto',
+      slidesPerView: 4,
       spaceBetween: 0,
       grabCursor: true,
       loop: true,
