--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -1,6 +1,8 @@
 <div id="new-featured-prods">
 <div class="container">
-    
+    <div class="title">
+      <h1>Featured Products</h1>
+    </div>
       <div class="featured-products-new">
         <div class="quote-slider">
           <div class="swiper">
