--- a/snippets/featured-new-products.liquid
+++ b/snippets/featured-new-products.liquid
@@ -10,6 +10,8 @@ health.'
 
 
 
-
+<div class="title">
+  <h1>Featured Products</h1>
+</div>
 
 {% render 'curalin-new-features-list', experienses: experienses, onlyData: true %}
