--- a/snippets/featured-new-products.liquid
+++ b/snippets/featured-new-products.liquid
@@ -10,8 +10,50 @@ health.'
 
 
 
-<div class="title">
-  <h1>Featured Products</h1>
+<div class="featured-products">
+  <div class="featured-title">Featured Products</div>
+  <a class="link-to-collection" href="{{ ctaButtonLink }}">Shop Now</a>
 </div>
 
 {% render 'curalin-new-features-list', experienses: experienses, onlyData: true %}
+
+<style>
+    .featured-products {
+        display: flex;
+    }
+
+    .featured-title {
+        font-family: 'PP Radio Grotesk';
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 53px;
+        color: #222222;
+    }
+
+    .link-to-collection {
+        font-family: 'PP Radio Grotesk';
+        
+        font-weight: 400;
+        font-size: 32px;
+        line-height: 35px;
+        text-align: right;
+        text-decoration-line: underline;
+        color: #222222;
+
+    }
+
+
+    @media screen and (max-width: 768px) {
+        .featured-title {
+            font-size: 32px;
+            line-height: 35px;
+        }
+
+        .link-to-collection {
+            font-size: 24px;
+            line-height: 26px;
+        }
+
+        
+    }
+</style>
