--- a/templates/page.glucose-support.liquid
+++ b/templates/page.glucose-support.liquid
@@ -3,4 +3,4 @@
 {% render 'start-healthier-life', ctaButtonLink: "/collections", ctaTitle: "SHOP NOW" %}
 {% render 'powerful-natural-ingredients' %}  
 {% section 'what-our-clients-say' %}
-{% render 'featured-new-products' %}
+{% render 'featured-new-products', ctaButtonLink: "/collections" %}
