--- a/snippets/featured-new-products.liquid
+++ b/snippets/featured-new-products.liquid
@@ -11,8 +11,10 @@ health.'
 
 
 <div class="featured-products">
+    <div class="container">
   <div class="featured-title">Featured Products</div>
   <a class="link-to-collection" href="{{ ctaButtonLink }}">Shop Now</a>
+  </div>
 </div>
 
 {% render 'curalin-new-features-list', experienses: experienses, onlyData: true %}
