--- a/snippets/featured-new-products.liquid
+++ b/snippets/featured-new-products.liquid
@@ -13,7 +13,7 @@ health.'
 <div class="featured-products">
     <div class="container">
   <div class="featured-title">Featured Products</div>
-  <a class="link-to-collection" href="{{ ctaButtonLink }}">Shop Now</a>
+  <a class="link-to-collection" href="{{ ctaButtonLink }}">Shop All</a>
   </div>
 </div>
 
