--- a/snippets/featured-new-products.liquid
+++ b/snippets/featured-new-products.liquid
@@ -22,6 +22,8 @@ health.'
 <style>
     .featured-products {
         display: flex;
+        justify-content: space-around;
+        padding: 20px;
     }
 
     .featured-title {
