--- a/snippets/featured-new-products.liquid
+++ b/snippets/featured-new-products.liquid
@@ -24,6 +24,7 @@ health.'
     .featured-products {
         display: flex;
         justify-content: space-around;
+        align-items: center;
         padding: 20px;
     }
 
@@ -49,13 +50,16 @@ health.'
 
 
     @media screen and (max-width: 768px) {
+        .featured-products {
+            padding: 2vw 1vw;
+        }
         .featured-title {
-            font-size: 32px;
+            font-size: 6vw;
             line-height: 35px;
         }
 
         .link-to-collection {
-            font-size: 24px;
+            font-size: 5vw;
             line-height: 26px;
         }
 
