--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -34,7 +34,13 @@
   
   <style>
   
-  
+  .swiper-slide.swiper-slide-active {
+    .quote-card {
+      top: unset;
+      width: unset;
+      margin: auto;
+    }
+  }
   #new-featured-prods .quote-slider {
     padding: unset;
     margin: unset;
