--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -42,7 +42,7 @@
   }
   #new-featured-prods .quote-slider .swiper-slide.swiper-slide-active .quote-card  {
       top: 0;
-      width: 100%;
+      width: unset;
       background: unset;
       box-shadow: unset;
     }
