--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -45,6 +45,7 @@
       width: unset;
       background: unset;
       box-shadow: unset;
+      margin: unset;
     }
   
     #new-featured-prods .quote-card {
