--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -40,6 +40,10 @@
     padding: unset;
     margin: unset;
   }
+
+  #new-featured-prods .quote-slider .swiper-slide .quote-card {
+    box-shadow: unset;
+  }
   #new-featured-prods .quote-slider .swiper-slide.swiper-slide-active .quote-card  {
       top: 0;
       width: unset;
