--- a/snippets/curalin-new-features-list.liquid
+++ b/snippets/curalin-new-features-list.liquid
@@ -43,6 +43,7 @@
 
   #new-featured-prods .quote-slider .swiper-slide .quote-card {
     box-shadow: unset;
+    background: unset;
   }
   #new-featured-prods .quote-slider .swiper-slide.swiper-slide-active .quote-card  {
       top: 0;
@@ -55,6 +56,10 @@
     #new-featured-prods .quote-card {
       background: unset;
     }
+
+    #new-featured-prods .quote-card .quote-info {
+      padding-top: unset;
+    } 
     #new-featured-prods .quote-slider .slider-control {
       justify-content: space-between;
     }
