--- a/snippets/featured-new-products.liquid
+++ b/snippets/featured-new-products.liquid
@@ -18,7 +18,7 @@ health.'
   </div>
 </div>
 
-{% render 'curalin-new-features-list', experienses: experienses, onlyData: true %}
+{% render 'curalin-new-features-list', experienses: experienses %}
 
 <style>
     .featured-products {
